[tool.poetry]
name = "kraken"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
krakenex = "^2.1.0"
streamlit = "^1.2.0"
plotly = "^5.4.0"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
